--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
+# Environment variables
 .env
+server.env
+
+# Dependencies
+node_modules/
+
+# Logs
+*.log
+npm-debug.log*
+logs/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
